========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-02-28

  - Moved beancount.scripts.query to beancount.query.shell in order to be
    consistent with the way other libraries are invoked.

  - Merged fix by yagebu for bug found in b.ops.summarize() that would not yield
    a list of ordered transactions.

  - Introduced a new "Custom" directive type. You can enter directives like
    this:

      2016-02-28 custom "budget" ....

    where "..." can be a mixed list of

    * string
    * date
    * boolean
    * number
    * amount (number + currency)

    The first element is a string, which is intended to be used as the runtime
    type of the directive. This can be used to prototype new features in plugins
    or otherwise.

    Right now, no consistency is enforced on the datatypes declared for
    directives with the same type name. Also, there is currently no way for a
    plugin to declare what a valid set of tokens may be (but I may do this later
    on to simplify error reporting for plugin implementors).


2016-02-27

  - Fixed rendering bug in bean-web whereby empty cells would receive a 0.00
    amount.

  - Improved rendering of the account name in the name of the compat importer.


2016-02-24

  - Changed the bean-doctor "linked" command to fetch the set of links from the
    entire set of entries.

  - Added ABS() function to the shell, in order to dig around for transactions
    with a particular amount.


2016-02-22

  - Fixed issue #98: There was a bug when fetching historical data from a Yahoo
    price source was failing, it wasn't handled correctly.

  - Merged LedgerHub back into beancount under a new "beancount.ingest" package.
    The new protocol for importers can be read at:
    /home/blais/p/repos/beancount1/src/python/beancount/ingest/importer.py

    There are three new scripts:

      bean-identify
      bean-extract
      bean-file
