@@ -1,15 +1,5 @@
 -*- mode: org -*-
 beancount: TODO
-* Misc
-
-  - Need a unit test to reproduce the fix in this commit.
-
-  - Update install documentation with installation instructions using pip3.
-  - (Look for examples using C code that require headers, they must have a
-    better solution than mine.)
-
-
-
 * Event
 
   - Should we validate that the query is legit before we even run it? I think
