@@ -20,7 +20,7 @@ from beancount.core import getters
 from beancount.core import amount
 from beancount.ops import prices
 from beancount.ops import holdings
-from beancount.reports import report
+from beancount.reports import base
 from beancount.reports import holdings_reports
 
 
@@ -296,7 +296,7 @@ def get_symbol(sources, prefer='google'):
     return symbol_map.get(prefer, symbol_items[0][1])
 
 
-class ExportPortfolioReport(report.TableReport):
+class ExportPortfolioReport(base.TableReport):
     """Holdings lists that can be exported to external portfolio management software."""
 
     names = ['export_holdings', 'export_portfolio', 'pfexport', 'exportpf']
