@@ -8,7 +8,7 @@ import io
 import textwrap
 import functools
 
-from beancount.reports import report
+from beancount.reports import base
 from beancount.reports import table
 from beancount.reports import tree_table
 from beancount.parser import printer
@@ -21,7 +21,7 @@ from beancount.utils import misc_utils
 from beancount.utils import date_utils
 
 
-class NoopReport(report.Report):
+class NoopReport(base.Report):
     """Report nothing."""
 
     names = ['check', 'validate']
@@ -31,7 +31,7 @@ class NoopReport(report.Report):
         pass
 
 
-class ErrorReport(report.HTMLReport):
+class ErrorReport(base.HTMLReport):
     """Report the errors."""
 
     names = ['errors']
@@ -60,7 +60,7 @@ class ErrorReport(report.HTMLReport):
         file.write('</div>\n')
 
 
-class PrintReport(report.Report):
+class PrintReport(base.Report):
     """Print out the entries."""
 
     names = ['print']
@@ -71,7 +71,7 @@ class PrintReport(report.Report):
         printer.print_entries(entries, dcontext, file=file)
 
 
-class AccountsReport(report.Report):
+class AccountsReport(base.Report):
     """Print out the list of all accounts."""
 
     names = ['accounts']
@@ -95,7 +95,7 @@ class AccountsReport(report.Report):
                                                    len=maxlen))
 
 
-class CurrentEventsReport(report.TableReport):
+class CurrentEventsReport(base.TableReport):
     """Produce a table of the current values of all event types."""
 
     names = ['current_events', 'latest_events']
@@ -111,7 +111,7 @@ class CurrentEventsReport(report.TableReport):
                                    (1, "Description")])
 
 
-class EventsReport(report.TableReport):
+class EventsReport(base.TableReport):
     """Produce a table of all the values of a particular event."""
 
     names = ['events']
@@ -138,8 +138,8 @@ class EventsReport(report.TableReport):
 
 
 
-class ActivityReport(report.HTMLReport,
-                     metaclass=report.RealizationMeta):
+class ActivityReport(base.HTMLReport,
+                     metaclass=base.RealizationMeta):
     """Render the last or recent update activity."""
 
     names = ['activity', 'updated']
@@ -217,7 +217,7 @@ class ActivityReport(report.HTMLReport,
 
 
 
-class StatsDirectivesReport(report.TableReport):
+class StatsDirectivesReport(base.TableReport):
     """Render statistics on each directive type, the number of entries by type."""
 
     names = ['stats-types', 'stats-directives', 'stats-entries']
@@ -237,7 +237,7 @@ class StatsDirectivesReport(report.TableReport):
 
 
 
-class StatsPostingsReport(report.TableReport):
+class StatsPostingsReport(base.TableReport):
     """Render the number of postings for each account."""
 
     names = ['stats-postings']
