@@ -4,7 +4,7 @@ import io
 import unittest
 
 from beancount.reports import misc_reports
-from beancount.reports import report_test
+from beancount.reports import base_test
 from beancount.parser import options
 from beancount import loader
 
@@ -17,7 +17,7 @@ class TestMiscReports(unittest.TestCase):
         errors = []
         options_map = options.OPTIONS_DEFAULTS.copy()
 
-        for report_, format_ in report_test.iter_reports(misc_reports.__reports__):
+        for report_, format_ in base_test.iter_reports(misc_reports.__reports__):
             output = report_.render(entries, errors, options_map, format_)
             self.assertEqual(options.OPTIONS_DEFAULTS, options_map)
             self.assertTrue(isinstance(output, str))
