@@ -11,7 +11,7 @@ import textwrap
 
 from beancount import loader
 from beancount.ops import validation
-from beancount.reports import report
+from beancount.reports import base
 from beancount.reports import misc_reports
 from beancount.reports import table
 from beancount.utils import file_utils
@@ -30,7 +30,7 @@ def get_list_report_string(only_report=None):
     """
     oss = io.StringIO()
     num_reports = 0
-    for report_class in report.get_all_reports():
+    for report_class in base.get_all_reports():
         # Filter the name
         if only_report and only_report not in report_class.names:
             continue
@@ -86,7 +86,7 @@ class ListFormatsAction(argparse.Action):
     def __call__(self, parser, namespace, values, option_string=None):
         # Get all the report types and formats.
         matrix = []
-        for report_class in report.get_all_reports():
+        for report_class in base.get_all_reports():
             formats = report_class.get_supported_formats()
             matrix.append((report_class.names[0], formats))
 
@@ -152,7 +152,7 @@ def main():
     subparsers = parser.add_subparsers(title='report',
                                        help='Name/specification of the desired report.')
 
-    for report_class in report.get_all_reports():
+    for report_class in base.get_all_reports():
         name, aliases = report_class.names[0], report_class.names[1:]
 
         oss = io.StringIO()
@@ -223,7 +223,7 @@ def main():
         with misc_utils.log_time('report.render', logging.info):
             try:
                 chosen_report.render(entries, errors, options_map, args.format, outfile)
-            except report.ReportError as exc:
+            except base.ReportError as exc:
                 sys.stderr.write("Error: {}\n".format(exc))
                 sys.exit(1)
     else:
